--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -71,5 +71,7 @@
     </div>
     <!-- Libs JS -->
     {% include 'app/inc/scripts.html' %}
+    {% block scripts %}
+    {% endblock %}
   </body>
 </html>
