--- a/templates/landing/diagnosa.html
+++ b/templates/landing/diagnosa.html
@@ -97,7 +97,7 @@
                                 <p class="wow fadeInUp" data-wow-delay=".5s">Menggunakan Algoritma K-Nearest Neighbor di Kabupaten Flores Timur</p>
                                 <div class="button wow fadeInUp" data-wow-delay=".7s">
                                     <a href="/accounts/login" class="btn">Login</a>
-                                    <a href="/app/diagnosa" class="btn">Diagnosa</a>
+                                    <a href="/diagnosa" class="btn">Diagnosa</a>
                                 </div>
                             </div>
                         </div>
