--- a/templates/app/inc/header.html
+++ b/templates/app/inc/header.html
@@ -10,6 +10,8 @@
       </a>
     </h1>
     <div class="navbar-nav flex-row order-md-last">
+      {% if request.user.is_anonymous %}
+      {% else %}
       <div class="nav-item dropdown">
         <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
           <span class="avatar avatar-sm" style="background-image: url(./static/avatars/000m.jpg)"></span>
@@ -19,14 +21,10 @@
           </div>
         </a>
         <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-          <a href="#" class="dropdown-item">Set status</a>
-          <a href="#" class="dropdown-item">Profile & account</a>
-          <a href="#" class="dropdown-item">Feedback</a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item">Settings</a>
-          <a href="#" class="dropdown-item">Logout</a>
+          <a href="/accounts/logout" class="dropdown-item">Logout</a>
         </div>
       </div>
+      {% endif %}
     </div>
   </div>
 </header>
